--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@
 *,
 .slick-slider {
     -webkit-touch-callout: none;
-    -khtml-user-select: none
+    -khtml-user-select: none;
+    user-select: none
 }
 
 @font-face {
@@ -400,7 +401,8 @@
 }
 
 .select2-container .select2-search--inline .select2-search__field::-webkit-search-cancel-button {
-    -webkit-appearance: none
+    -webkit-appearance: none;
+    appearance: none
 }
 
 .select2-dropdown {
@@ -459,7 +461,8 @@
 }
 
 .select2-search--dropdown .select2-search__field::-webkit-search-cancel-button {
-    -webkit-appearance: none
+    -webkit-appearance: none;
+    appearance: none
 }
 
 .select2-search--dropdown.select2-search--hide {
@@ -658,7 +661,8 @@
     border: none;
     outline: 0;
     box-shadow: none;
-    -webkit-appearance: textfield
+    -webkit-appearance: textfield;
+    appearance: textfield;
 }
 
 .select2-container--default .select2-results>.select2-results__options {
@@ -965,7 +969,8 @@ body {
 
 .lightSpeedOutRight.goAway,
 .wiggle.go {
-    -webkit-animation-timing-function: ease-in
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in
 }
 
 .flip.go,
@@ -979,7 +984,8 @@ body {
 .flipInY.go,
 .flipOutX,
 .flipOutX.goAway {
-    -webkit-backface-visibility: visible!important
+    -webkit-backface-visibility: visible!important;
+    backface-visibility: visible!important
 }
 
 .slow,
@@ -1092,7 +1098,8 @@ body {
 .fadeInUp {
     opacity: 0;
     -webkit-transform: translateX(400px);
-    transform: translateX(400px) -webkit-transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    transform: translateX(400px);
     -moz-transform: translateZ(0);
     -ms-transform: translateZ(0);
     -o-transform: translateZ(0);
@@ -1118,7 +1125,8 @@ body {
 .lightSpeedInRight {
     opacity: 0;
     -webkit-transform: translateX(400px);
-    transform: translateX(400px) -webkit-transform: translateZ(0);
+    transform: translateX(400px);
+    -webkit-transform: translateZ(0);
     -moz-transform: translateZ(0);
     -ms-transform: translateZ(0);
     -o-transform: translateZ(0);
@@ -3000,7 +3008,8 @@ body {
 .bounceIn,
 .bounceOut,
 .flipOutX {
-    -webkit-animation-duration: .75s
+    -webkit-animation-duration: .75s;
+    animation-duration: .75s
 }
 
 .bounceIn,
@@ -6690,7 +6699,8 @@ textarea {
     display: none;
     justify-content: center;
     align-items: center;
-    transform: translateX(-100%) -webkit-transform: translate3d(0, 0, 0);
+    transform: translateX(-100%);
+    -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
@@ -12180,7 +12190,7 @@ textarea::placeholder {
         height: 37vh!important;
         min-height: 37vh!important
     }
-    . .all-news .header-content,
+    .all-news .header-content,
     .services .header-content {
         max-height: 41vh!important;
         min-height: 414px
@@ -14090,10 +14100,10 @@ textarea::placeholder {
             }
             100% {
                 left: -104%
-            }
-            .slide::after {
-                opacity: .65
-            }
+            }         
+        }
+        .slide::after {
+            opacity: .65
         }
         .vertical-slider-heading {
             top: 0;
